--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
       - run:
           name: Release
           command: |
-            if [ $CIRCLE_BRANCH = "main" ]; then
+            if [[ $CIRCLE_BRANCH == main ]] || [[ $CIRCLE_BRANCH == v* ]]; then
               ./release.sh << pipeline.parameters.tests-version >> ${GITHUB_TOKEN}
             else
               echo "Will not release - not running on main branch"
